# syscall_lib_inline

./: CMakeLists.txt  CMakePresets.json  README.md  StructLayoutSettings.json
include/: CMakeLists.txt
include/capstone/: CMakeLists.txt
include/capstone/include/capstone/: ppc.h
include/capstone/lib/cmake/capstone/: capstone-targets-noconfig.cmake  capstone-targets-release.cmake  capstone-targets.cmake
include/capstone/lib/pkgconfig/: capstone.pc
syscall_lib/: CMakeLists.txt  native.h  syscall_lib.cpp  syscall_lib.h
syscall_lib/Syscall/: CMakeLists.txt  Syscall.cpp  Syscall.h
syscall_lib/SyscallWalker/: CMakeLists.txt  SyscallWalker.cpp  SyscallWalker.h
